# spikeDetection

./: .gitignore  CLAUDE.md  CROSS_VALIDATION_REPORT.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  GETTING_STARTED.md  GUI_PERFORMANCE.md  USER_GUIDE.md
spikedetect/: DATA_FORMAT_SPEC.md  MIGRATION_GUIDE.md  pyproject.toml
spikedetect/examples/: batch_detection.py  gui_demo.ipynb  gui_workflow.py  gui_workflow_from_file.py
spikedetect/src/spikedetect/: __init__.py  models.py  utils.py
spikedetect/src/spikedetect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spikedetect/src/spikedetect/gui/: __init__.py  _widgets.py  filter_gui.py  spotcheck_gui.py  template_gui.py  threshold_gui.py  workflow.py
spikedetect/src/spikedetect/io/: __init__.py  abf.py  config.py  mat.py  native.py
spikedetect/src/spikedetect/pipeline/: __init__.py  classify.py  detect.py  dtw.py  filtering.py  inflection.py  peaks.py  template.py
spikedetect/tests/: conftest.py  test_classify.py  test_cross_validation.py  test_dtw.py  test_filtering.py  test_gui.py  test_inflection.py  test_io.py  test_models.py  test_peaks.py  test_pipeline.py  test_template.py
