[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spikedetect"
version = "0.1.0"
description = "Spike detection and sorting for electrophysiology recordings using DTW template matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Arthur Hong"},
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
fast = [
    "dtaidistance>=2.3",
    "numba>=0.57",
]
io = [
    "pyabf>=2.3",
    "h5py>=3.8",
]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "spikedetect[fast,io,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
